[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Tools/BaseTool.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Tools/SelectionTools/SelectionTool.gd" type="Script" id=2]
[ext_resource path="res://src/UI/Nodes/ValueSlider.tscn" type="PackedScene" id=3]

[node name="ToolOptions" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="ColorRect" parent="." index="0"]
margin_right = 147.0

[node name="Label" parent="." index="1"]
margin_right = 147.0

[node name="ModeLabel" type="Label" parent="." index="2"]
margin_top = 26.0
margin_right = 147.0
margin_bottom = 40.0
text = "Mode:"

[node name="Modes" type="OptionButton" parent="." index="3"]
margin_top = 44.0
margin_right = 147.0
margin_bottom = 64.0
align = 1

[node name="TileMode" type="CheckButton" parent="." index="4"]
margin_top = 68.0
margin_right = 147.0
margin_bottom = 108.0
hint_tooltip = "Selection will do looping (moves cursor to start if it crosses boundaries)"
text = "Tile Mode:"

[node name="PositionLabel" type="Label" parent="." index="5"]
margin_top = 112.0
margin_right = 147.0
margin_bottom = 126.0
text = "Position:"

[node name="XSpinBox" parent="." index="6" instance=ExtResource( 3 )]
margin_top = 130.0
margin_right = 147.0
margin_bottom = 154.0
hint_tooltip = "X coordinate of the top left corner"
allow_greater = true
allow_lesser = true
prefix = "X:"

[node name="YSpinBox" parent="." index="7" instance=ExtResource( 3 )]
margin_top = 158.0
margin_right = 147.0
margin_bottom = 182.0
hint_tooltip = "Y coordinate of the top left corner"
allow_greater = true
allow_lesser = true
prefix = "Y:"

[node name="SizeLabel" type="Label" parent="." index="8"]
margin_top = 186.0
margin_right = 147.0
margin_bottom = 200.0
text = "Size:"

[node name="WSpinBox" parent="." index="9" instance=ExtResource( 3 )]
margin_top = 204.0
margin_right = 147.0
margin_bottom = 228.0
hint_tooltip = "Width of selection"
min_value = 1.0
value = 1.0
allow_greater = true
prefix = "W:"

[node name="HSpinBox" parent="." index="10" instance=ExtResource( 3 )]
margin_top = 232.0
margin_right = 147.0
margin_bottom = 256.0
hint_tooltip = "Height of selection"
min_value = 1.0
value = 1.0
allow_greater = true
prefix = "H:"

[node name="Timer" type="Timer" parent="." index="11"]
wait_time = 0.2
one_shot = true

[connection signal="item_selected" from="Modes" to="." method="_on_Modes_item_selected"]
[connection signal="toggled" from="TileMode" to="." method="_on_TileMode_toggled"]
[connection signal="value_changed" from="XSpinBox" to="." method="_on_position_value_changed" binds= [ true ]]
[connection signal="value_changed" from="YSpinBox" to="." method="_on_position_value_changed" binds= [ false ]]
[connection signal="value_changed" from="WSpinBox" to="." method="_on_size_value_changed" binds= [ true ]]
[connection signal="value_changed" from="HSpinBox" to="." method="_on_size_value_changed" binds= [ false ]]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
